_src/assets/scss/layout/_footer.scss
@import "../core/_variables.scss";

.footer {
  padding-top: 30px;
  background-color: $color-footer;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;

  &__button {
    bottom: 96%;
    left: 47%;
    background-color: $color-primary;
    height: 45px;
    width: 45px;
    border-radius: 45px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    position: absolute;
    &__img {
      margin-top: 10px;
    }
  }
  &__menu {
    display: flex;
    font-size: $sizeFooter;
    flex-direction: column;
    padding-top: 30px;
    font-size: $sizeFooter;
    text-transform: $upAll;
    text-align: center;
    &__list {
      font-size: $sizeFooter;
      line-height: 1.88;
      letter-spacing: normal;
    }
    &__item {
      display: inline;
      display: flex;
      justify-content: center;
    }
    &__link {
      color: $color-primary;
      text-decoration: none;
    }
  }
  &__text {
    color: $color-primary;
    padding-top: 30px;
    padding-bottom: 45px;
    line-height: 2.14;
    letter-spacing: normal;
    font-size: $sizeSmall;
    &__love--heart {
      color: $color-button;
    }
  }
  @media all and (min-width: 768px) {
    flex-direction: row;
    justify-content: space-around;
    align-items: flex-start;
    &__button {
      bottom: 93%;
    }
    &__menu {
      order: 2;
      padding-top: 15px;
      padding-bottom: 45px;
      &__item {
        justify-content: flex-start;
      }
    }
    &__text {
      order: 1;
      padding-top: 15px;
    }
  }
}

